# study

Mujoco/HER+ddpg测试ur3e机械臂抓取/gym_test/: README.md  note.py  yidongANDgrasp.py
Mujoco/HER+ddpg测试ur3e机械臂抓取/gym_test/cube_stack/: cube_stack.py  globvar.py  objs_collection.py
Mujoco/HER+ddpg测试ur3e机械臂抓取/gym_test/cube_stack/ddpg/: ddpg.py  model.py
Mujoco/HER+ddpg测试ur3e机械臂抓取/gym_test/cube_stack/traditional_pick/: globvar.py  tranditional_pick.py  utils.py
Mujoco/HER+ddpg测试ur3e机械臂抓取/gym_test/ddpg-2/: HP.py  ddpg.py  ddpg_2_phase.py  her_sampler.py  joints_data.txt  main.py  main_2_phase.py  mocap_data.txt  model.py  note.py  plot.py  review.py
Mujoco/HER+ddpg测试ur3e机械臂抓取/gym_test/ddpg-2/tmp_results/: FetchPickAndPlace-v1ep_checkpoint_actor_her.pth  FetchPickAndPlace-v1ep_checkpoint_critic_her.pth  FetchPickAndPlace-v1ep_goal_normalizer.pth  FetchPickAndPlace-v1ep_obs_normalizer.pth  robotics_ur_ur3e-v0ep_checkpoint_actor_her.pth  robotics_ur_ur3e-v0ep_checkpoint_critic_her.pth  robotics_ur_ur3e-v0ep_goal_normalizer.pth  robotics_ur_ur3e-v0ep_obs_normalizer.pth  robotics_ur_ur3e-v1ep_checkpoint_actor_her_back.pth  robotics_ur_ur3e-v2ep_checkpoint_actor_her.pth  robotics_ur_ur3e-v2ep_goal_normalizer.pth
Mujoco/HER+ddpg训练ur3e机械臂抓取/ddpg-2/: HP.py  README.md  ddpg.py  her_sampler.py  main.py  main_using_2_phase.py  model.py  note.py  plot.py  rollout.py
Mujoco/HER+ddpg训练ur3e机械臂抓取/ddpg-2/tmp_results/: 2phase.txt  FetchPickAndPlace-v1ep_checkpoint_actor_her.pth  FetchPickAndPlace-v1ep_checkpoint_critic_her.pth  FetchPickAndPlace-v1ep_goal_normalizer.pth  FetchPickAndPlace-v1ep_obs_normalizer.pth  filter_2phase.csv  filter_new_ep.csv  new_ep.csv  scores_FetchPickAndPlace-v1_1_256_num_workers_16.csv  scores_环境_ FetchPickAndPlace-v1——seed_ 3——线程数_ 32——是否ep_ False——seed_ 3——网络节点数256——epochs_ 120——备注_baseline3.csv
Mujoco/HER+ddpg训练ur3e机械臂抓取/ddpg-2/tmp_results/pick-baseline-hidden-256/: baseline.csv  scores_FetchPickAndPlace-v1_1_256.csv  scores_FetchPickAndPlace-v1_2_256.csv  scores_FetchPickAndPlace-v1_3_256.csv
Mujoco/ur3e的mujoco环境/: README.md
Mujoco/ur3e的mujoco环境/gym_robotics/: __init__.py  core.py
Mujoco/ur3e的mujoco环境/gym_robotics/envs/: __init__.py
Mujoco/ur3e的mujoco环境/gym_robotics/envs/ur3e_grip_3/: __init__.py  robot_env.py  ur_env.py  ur_pick_and_place.py
Mujoco/ur3e的mujoco环境/gym_robotics/envs/ur3e_grip_4/: __init__.py  robot_env.py  ur_env.py  ur_pick_and_place.py
ROS/ur3e/: .ycm_extra_conf.py  dlut-rl-readme.docx
ROS/ur3e/devel/: .catkin  .rosinstall  local_setup.sh
ROS/ur3e/devel/include/p_robot_learning_demo/: UrDemoAction.h  UrDemoActionFeedback.h  UrDemoActionGoal.h  UrDemoActionResult.h  UrDemoFeedback.h  UrDemoGoal.h  UrDemoResult.h
ROS/ur3e/devel/lib/p_robot_learning_demo/: p_robot_go_server_real
ROS/ur3e/devel/lib/pkgconfig/: gazebo_grasp_plugin.pc  gazebo_version_helpers.pc  p_robot_learning_demo.pc  pysdf.pc  robot_description.pc  robot_desk_moveit_config.pc  robot_gazebo.pc  robot_moveit_config.pc  roboticsgroup_gazebo_plugins.pc  robotiq_85_bringup.pc  robotiq_85_description.pc  robotiq_85_driver.pc  robotiq_85_gazebo.pc  robotiq_85_moveit_config.pc  robotiq_85_msgs.pc  si_utils.pc  ur10_e_moveit_config.pc  ur10_moveit_config.pc  ur3_e_moveit_config.pc  ur3_moveit_config.pc  ur5_e_moveit_config.pc  ur5_moveit_config.pc  ur_bringup.pc  ur_description.pc  ur_driver.pc  ur_e_description.pc  ur_e_gazebo.pc  ur_gazebo.pc  ur_kinematics.pc  ur_msgs.pc
ROS/ur3e/src/p_robot_learning_demo/: CMakeLists.txt  package.xml
ROS/ur3e/src/p_robot_learning_demo/include/: Transform.hpp  io.hpp
ROS/ur3e/src/p_robot_learning_demo/include/p_robot_learning_demo/: action_planning.hpp  path_planning.hpp
ROS/ur3e/src/p_robot_learning_demo/launch/: demo_node(复件).launch  demo_node.launch
ROS/ur3e/src/p_robot_learning_demo/scripts/: .Thinker.py.swp  GUI.py  Object.py  Robot.py  Robot1.py  Thinker.py  note.py  note1.py  rg.py  test.py
ROS/ur3e/src/p_robot_learning_demo/src/: add_object.cpp  gazebo_set_states_client.cpp  joint_state_control.cpp  p_robot_go_client.cpp  p_robot_go_server.cpp  p_robot_go_server_real.cpp  robotiq_grasp.cpp  robotiq_server.cpp  修改
ROS/ur3e/src/robot_description/: CMakeLists.txt  gzplugin_grasp_fix.urdf.xacro
ROS/ur3e/src/robot_description/meshes/: base_platform.STL  base_platform_simu.STL  desk1.STL  ur5_gripper.STL
ROS/ur3e/src/robot_description/urdf/: desk.urdf  ur_robotiq_env.urdf  ur_robotiq_env.xacro
ROS/ur3e/src/robot_desk_moveit_config/: .setup_assistant  CMakeLists.txt
ROS/ur3e/src/robot_desk_moveit_config/config/: fake_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml  ur_env.srdf
ROS/ur3e/src/robot_desk_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  (+15 more)
ROS/ur3e/src/robot_moveit_config/: .setup_assistant
机械臂控制/ur_control/base/: main.py
机械臂控制/ur_control/base/MJ_IK/: README.md  globvar.py  joints_data.txt  key.py  key_loop.py  main.py  main_loop.py  mocap_data.txt  real_loop.py  real_loop_t.py  sim_loop.py
机械臂控制/ur_control/base/mj_with_real/: globvar.py  key_loop.py  kinect_loop.py  main.py  mujoco_loop.py  real_loop.py
机械臂控制/ur_control/base/thread_test/: config.py  main.py  mainloop.py  real_loop.py
(+394 files in other folders)
